--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,109 @@
+:root {
+  --primary-color: #0e1525;
+  --secondary-color: #03fc96;
+  --navigation-bg: #0e1525;
+}
 
+body {
+  background: var(--primary-color) !important;
+  color: white !important;
+}
+body h1 {
+  text-shadow: 2px 2px 60px var(--secondary-color);
+  color: white;
+  font-size: 55px;
+  font-weight: bold;
+  letter-spacing: 3px;
+}
+body h3 {
+  color: white !important;
+  font-weight: 500 !important;
+}
+.required:after {
+  content: " *";
+  color: red;
+}
 
-.slider img{
+.slider img {
   height: 450px;
   object-fit: cover;
+}
+
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white !important;
+}
+
+/* BOOTSTRAP STYLES MOD  */
+
+.jumotron-sm {
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+  background: var(--primary-color) !important;
+  /* box-shadow: 0 6px 30px 0 var(--secondary-color) !important; */
+  backdrop-filter: blur(19px) !important;
+  -webkit-backdrop-filter: blur(19px) !important;
+  border-radius: 10px !important;
+  border: 1px solid var(--secondary-color) !important;
+}
+.jumbotron {
+  background: var(--primary-color) !important;
+  box-shadow: 0 8px 20px 0 var(--secondary-color) !important;
+  /* backdrop-filter: blur(19px) !important; */
+  -webkit-backdrop-filter: blur(19px) !important;
+  border-radius: 10px !important;
+  border: 1px solid var(--secondary-color) !important;
+}
+
+/* ANT DESIGN COMPONENT STYLES MOD  */
+.ant-menu {
+  background-color: var(--navigation-bg) !important;
+  color: white !important;
+  /* border-bottom: 1px solid var(--secondary-color) !important; */
+}
+
+.ant-menu a {
+  color: white !important;
+}
+.ant-menu > .ant-menu-item:hover,
+.ant-menu > .ant-menu-submenu:hover,
+.ant-menu > .ant-menu-item-active,
+.ant-menu > .ant-menu-submenu-active,
+.ant-menu > .ant-menu-item-open,
+.ant-menu > .ant-menu-submenu-open,
+.ant-menu > .ant-menu-item-selected,
+.ant-menu > .ant-menu-submenu-selected {
+  color: var(--secondary-color) !important;
+  border-bottom: 2px solid var(--secondary-color) !important;
+}
+
+.ant-card-meta-description {
+  color: white !important;
+}
+
+.ant-card {
+  border: 2px solid var(--secondary-color) !important;
+}
+.ant-card-meta-title {
+  color: white !important;
+  text-align: left;
+}
+.ant-card > .ant-card-cover,
+.ant-card-body,
+.ant-card-actions {
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: var(--primary-color);
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  padding: 0 !important;
+  word-wrap: break-word;
+}
+.ant-card-actions {
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: var(--primary-color) !important;
+}
+
+.ant-card-actions a {
+  color: white !important;
 }
